# PlantDiseasesDetection

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  GITHUB_SETUP.md  GITHUB_SYNC.md  LICENSE  MODEL_STATUS.md  NewPlantDiseasesDataset.ipynb  PlantDiseaseDetection.ipynb  README.md  Untitled3.ipynb  app_showcase.py  coverage.xml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  sync_to_github.sh  train_model.py
.github/workflows/: ci-cd.yml
sample_images/: README.md  test_batch.txt
scripts/: create_advanced_weights.py  create_demo_weights.py  create_diverse_weights.py  create_functional_weights.py  create_realistic_weights.py  create_variance_sensitive_model.py  download_realistic_samples.py  download_sample_data.py  train_proper_weights.py
src/: inference.py
src/data/: dataloader.py  treatments.py
src/models/: architectures.py
src/utils/: export.py  metrics.py
src/visualization/: gradcam.py
tests/: test_imports.py  test_model.py
weights/: README.md
weights/pretrained/: best_model.h5  best_model.weights.h5  model_info.json
