[metadata]
name = plant-disease-detection
version = 1.0.0

[options]
packages = find:
python_requires = >=3.8,<3.10

[options.packages.find]
where = .
include = src*

[tool:pytest]
testpaths = tests
python_files = test_*.py
filterwarnings =
    ignore::DeprecationWarning
    ignore::PendingDeprecationWarning